--- a/src/static/scss/components/_side-bar.scss
+++ b/src/static/scss/components/_side-bar.scss
@@ -121,6 +121,7 @@
         display: flex;
         align-items: center;
         flex: 1;
+        flex: 0 0 auto;
         flex-direction: column;
 
         margin-right: 1.6rem;
@@ -137,6 +138,8 @@
 
       & > .text {
         font-size: $font-size-mili;
+
+        flex: 1;
 
         margin-top: 0;
 
