change scroll position

--- a/src/static/scss/components/_side-bar.scss
+++ b/src/static/scss/components/_side-bar.scss
@@ -56,12 +56,15 @@
 
     height: calc(100% - 9.8rem);
 
+    direction: rtl;
+
     & > .suggestion {
       position: relative;
 
       display: flex;
       align-items: center;
       flex: 0 0 auto;
+      flex-direction: row-reverse;
 
       min-height: 3rem;
       padding: 1.6rem;
@@ -143,6 +146,8 @@
         flex: 1;
 
         margin-top: 0;
+
+        text-align: left;
 
         color: $color-gray;
       }
