--- a/src/static/scss/components/_side-bar.scss
+++ b/src/static/scss/components/_side-bar.scss
@@ -49,7 +49,7 @@
     }
   }
 
-  & > .suggestions {
+  & > .clusters {
     display: flex;
     overflow-x: hidden;
     overflow-y: auto;
@@ -81,7 +81,8 @@
       background: linear-gradient(transparent, $color-whisper);
     }
 
-    & > .suggestion {
+    & > .cluster > .content,
+    & > .cluster > .opinions > .opinion {
       position: relative;
 
       display: flex;
@@ -175,6 +176,97 @@
       & > .count,
       & > .text {
         transition: all .15s $swift-out;
+      }
+    }
+
+    & > .cluster > .opinions > .opinion {
+      & > .avatar {
+        flex: 1;
+
+        margin-right: 1.6rem;
+
+        & > img {
+          width: 2.625rem;
+          height: 2.625rem;
+
+          border-radius: 50%;
+        }
+      }
+
+      & > .content {
+        padding-bottom: 2.5rem;
+
+        color: $color-gray;
+
+        & > .header {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          & > .name {
+            font-size: $font-size-deci;
+            font-weight: bold;
+          }
+
+          & > .date {
+            font-size: $font-size-micro;
+          }
+        }
+
+        & > .text {
+          font-size: $font-size-centi;
+
+          margin-top: .5rem;
+
+          color: $color-gray;
+        }
+      }
+
+      & > .votes {
+        position: absolute;
+        right: 1.6rem;
+        bottom: 1.6rem;
+
+        display: flex;
+        align-items: center;
+
+        & > * + * {
+          margin-left: .75rem;
+        }
+
+        & > .vote {
+          font-size: $font-size-micro;
+
+          display: flex;
+          align-items: center;
+
+          color: $color-gray;
+
+          &::before {
+            display: block;
+
+            width: .5rem;
+            height: .5rem;
+            margin-right: .25rem;
+
+            content: '';
+
+            border-radius: 50%;
+            background-color: red;
+          }
+
+          &.-aprove::before {
+            background-color: $color-brand;
+          }
+
+          &.-reject::before {
+            background-color: $color-red;
+          }
+
+          &.-neutral::before {
+            background-color: $color-deep-gray;
+          }
+        }
       }
     }
   }
