--- a/src/static/scss/components/_side-bar.scss
+++ b/src/static/scss/components/_side-bar.scss
@@ -127,19 +127,6 @@
         }
       }
 
-      &.-active {
-        background-color: #FFF;
-
-        & > .count,
-        & > .text {
-          transform: translateX(0);
-        }
-
-        &::before {
-          opacity: 1;
-        }
-      }
-
       & > .count {
         font-size: $font-size-micro;
         font-weight: bold;
@@ -179,92 +166,117 @@
       }
     }
 
-    & > .cluster > .opinions > .opinion {
-      & > .avatar {
-        flex: 1;
-
-        margin-right: 1.6rem;
-
-        & > img {
-          width: 2.625rem;
-          height: 2.625rem;
-
-          border-radius: 50%;
-        }
-      }
-
+    & > .cluster.-active {
       & > .content {
-        padding-bottom: 2.5rem;
+        background-color: #FFF;
 
-        color: $color-gray;
-
-        & > .header {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-
-          & > .name {
-            font-size: $font-size-deci;
-            font-weight: bold;
-          }
-
-          & > .date {
-            font-size: $font-size-micro;
-          }
+        & > .count,
+        & > .text {
+          transform: translateX(0);
         }
 
-        & > .text {
-          font-size: $font-size-centi;
-
-          margin-top: .5rem;
-
-          color: $color-gray;
+        &::before {
+          opacity: 1;
         }
       }
 
-      & > .votes {
-        position: absolute;
-        right: 1.6rem;
-        bottom: 1.6rem;
+      & > .opinions {
+        display: block;
+      }
+    }
 
-        display: flex;
-        align-items: center;
+    & > .cluster > .opinions {
+      display: none;
 
-        & > * + * {
-          margin-left: .75rem;
-        }
+      & > .opinion {
+        & > .avatar {
+          margin-right: 1.6rem;
 
-        & > .vote {
-          font-size: $font-size-micro;
-
-          display: flex;
-          align-items: center;
-
-          color: $color-gray;
-
-          &::before {
-            display: block;
-
-            width: .5rem;
-            height: .5rem;
-            margin-right: .25rem;
-
-            content: '';
+          & > img {
+            width: 2.25rem;
+            height: 2.25rem;
 
             border-radius: 50%;
-            background-color: red;
+          }
+        }
+
+        & > .content {
+          position: relative;
+
+          padding-bottom: 2rem;
+
+          color: $color-gray;
+
+          & > .header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            & > .name {
+              font-size: $font-size-centi;
+              font-weight: bold;
+            }
+
+            & > .date {
+              font-size: $font-size-micro;
+            }
           }
 
-          &.-aprove::before {
-            background-color: $color-brand;
+          & > .text {
+            font-size: $font-size-mili;
+
+            flex: 1;
+
+            margin-top: .5rem;
+
+            color: $color-gray;
           }
 
-          &.-reject::before {
-            background-color: $color-red;
-          }
+          & > .votes {
+            position: absolute;
+            bottom: 0;
+            left: 0;
 
-          &.-neutral::before {
-            background-color: $color-deep-gray;
+            display: flex;
+            align-items: center;
+
+            & > * + * {
+              margin-left: .75rem;
+            }
+
+            & > .vote {
+              font-size: $font-size-micro;
+
+              display: flex;
+              align-items: center;
+
+              color: $color-gray;
+
+              &::before {
+                display: block;
+
+                width: .5rem;
+                height: .5rem;
+                margin-right: .25rem;
+
+                content: '';
+
+                border-radius: 50%;
+                background-color: red;
+              }
+
+              &.-aprove::before {
+                background-color: $color-brand;
+              }
+
+              &.-reject::before {
+                background-color: $color-red;
+              }
+
+              &.-neutral::before {
+                background-color: $color-deep-gray;
+              }
+            }
           }
         }
       }
