--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-<main class="document-editor -active js-documentEditor">
+<main class="document-editor -active js-documentEditor" data-document-id="{{ object.id }}">
   {% include "components/side-bar.html" %}
   <article>
     <header>
@@ -35,5 +35,6 @@
 
 {% block page_js %}
 <script src="{% static 'js/components/documentSideBar/view.js' %}"></script>
+<script src="{% static 'js/components/clusters/views.js' %}"></script>
 <script src="{% static 'js/pages/editDocument.js' %}"></script>
 {% endblock page_js %}
