--- a/src/static/scss/components/_side-bar.scss
+++ b/src/static/scss/components/_side-bar.scss
@@ -265,7 +265,7 @@
                 background-color: red;
               }
 
-              &.-aprove::before {
+              &.-approve::before {
                 background-color: $color-brand;
               }
 
