--- a/src/templates/components/clusters.html
+++ b/src/templates/components/clusters.html
@@ -30,7 +30,7 @@
         <div class="votes">
           <span class="vote -reject">{{suggestion.votes|count_votes:"reject"}}</span>
           <span class="vote -neutral">{{suggestion.votes|count_votes:"neutral"}}</span>
-          <span class="vote -aprove">{{suggestion.votes|count_votes:"approve"}}</span>
+          <span class="vote -approve">{{suggestion.votes|count_votes:"approve"}}</span>
         </div>
       </div>
     </div>
