--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -3,6 +3,25 @@
 {% block title %}
   {{ object.title }}
 {% endblock title %}
+{% block navbar %}
+<div class="nav-bar {% if is_owner %} -admin{% endif %}">
+  <div class="nav-burger"></div>
+  <a href="{% url 'home' %}" class="brand">Wikilegis</a>
+  {% if is_owner %}
+  <div class="project">
+    <span class="title">Patrocínio de bancos públicos a clubes de futebol</span>
+    <div class="dropdown">
+      <span class="-closed">Bancada do esporte</span>
+      <ul class="list">
+        <a href="#">Bancada do esporte 1</a>
+        <a class="-closed" href="#">Bancada do esporte 2</a>
+        <a href="#">Bancada do esporte 3</a>
+      </ul>
+    </div>
+  </div>
+  {% endif %}
+</div>
+{% endblock navbar %}
 
 {% block body_classes %}-white{% endblock %}
 
