--- a/src/templates/components/side-bar.html
+++ b/src/templates/components/side-bar.html
@@ -3,112 +3,7 @@
     <h3>Grupos de Opiniões Similares</h3>
     <div class="filter"></div>
   </div>
-  <div class="suggestions">
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
-    <div class="suggestion js-suggestionCluster">
-      <div class="count">
-        <span class="value">13</span>
-        <span>Opiniões</span>
-      </div>
-      <p class="text">“Muito restrito. Poderia ampliar para além de produtos de consumo.”</p>
-    </div>
+  <div class="clusters js-clusters">
   </div>
   <div class="toggle js-toggleButton"></div>
 </aside>
