Create dashboard groups

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -52,6 +52,7 @@
 @import 'components/document-editor';
 @import 'components/side-bar';
 @import 'components/tool-bar';
+@import 'components/dashboard-list';
 
 // Vendor
 @import 'vendor/tooltip';
