--- a/src/templates/pages/dashboard.html
+++ b/src/templates/pages/dashboard.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<main class="projects-list" id="js-projects-list">
+<main class="dashboard-list" id="js-projects-list">
   <div class="header">
     <h1>Meus Documentos</h1>
     <div class="tabs">
