--- a/src/static/scss/components/_user-profile.scss
+++ b/src/static/scss/components/_user-profile.scss
@@ -26,6 +26,14 @@
       font-size: $font-size-mili;
       font-weight: bold;
     }
+
+    & > .tags {
+      display: flex;
+
+      & > * + * {
+        margin-left: .5rem;
+      }
+    }
   }
 
   & > .action {
