--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -44,15 +44,15 @@
       <hr>
     </header>
     {% for excerpt in object.excerpts.all %}
-    {% if excerpt.excerpt_type.align_center %}
-    <h3>{% excerpt_numbering excerpt %}</h3>
-    <h3>{{ excerpt.content|safe }}</h3>
-    {% else %}
-    <p class="js-excerptWrapper" contenteditable="true">
-      <b contenteditable="false">{% excerpt_numbering excerpt %}</b>
-      {% include "components/document-excerpt.html" with excerpt=excerpt %}
-    </p>
-    {% endif %}
+      {% if excerpt.excerpt_type.align_center %}
+      <h3>{% excerpt_numbering excerpt %}</h3>
+      <h3>{{ excerpt.content|safe }}</h3>
+      {% else %}
+      <p class="js-excerptWrapper {% if not excerpt.suggestions.all %}-reduce{% endif %}" contenteditable="true">
+        <b contenteditable="false">{% excerpt_numbering excerpt %}</b>
+        {% include "components/document-excerpt.html" with excerpt=excerpt %}
+      </p>
+      {% endif %}
     {% endfor %}
   </article>
   {% include "components/tool-bar.html" %}
