Fix suggestion input login

--- a/src/templates/components/suggestion-input.html
+++ b/src/templates/components/suggestion-input.html
@@ -20,7 +20,7 @@
       </div>
       <span class="error js-inputError"></span>
     {% else %}
-      <h3 class="notice"><a class="js-loginButton" href="/admin/login?next={{request.path}}">Faça login</a> para dar sua opinião sobre ele.</h3>
+      <h3 class="notice"><a class="js-loginButton" href="#">Faça login</a> para dar sua opinião sobre ele.</h3>
     {% endif %}
   </div>
 </div>
