--- a/src/templates/components/nav-bar.html
+++ b/src/templates/components/nav-bar.html
@@ -1,6 +1,6 @@
 <div class="nav-bar {% if is_owner %} -admin{% endif %}">
   <div class="nav-burger"></div>
-  <a href="{% url 'home' %}" class="brand">Wikilegis</a>
+  <a href="{% url 'home' %}" class="brand -beta">Wikilegis</a>
   {% if is_owner %}
   <div class="tools">
     <a href="#" class="-active">Meus documentos</a>
