--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -6,7 +6,7 @@
 {% block navbar %}
 <div class="nav-bar {% if is_owner %} -admin{% endif %}">
   <div class="nav-burger"></div>
-  <a href="{% url 'home' %}" class="brand">Wikilegis</a>
+  <a href="{% url 'home' %}" class="brand -beta">Wikilegis</a>
   {% if is_owner %}
   <div class="project">
     <span class="title">{{object.title}}</span>
