Add initial addExcerpt component structure
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -52,6 +52,7 @@
 @import 'components/document-editor';
 @import 'components/side-bar';
 @import 'components/tool-bar';
+@import 'components/add-excerpt';
 
 // Vendor
 @import 'vendor/tooltip';
