--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -66,6 +66,8 @@ body.-white .nav-bar {
     font-size: .875rem;
     font-weight: 800;
 
+    position: relative;
+
     display: flex;
     align-items: center;
 
@@ -78,6 +80,24 @@ body.-white .nav-bar {
 
     @include bp-smallonly {
       padding: 0;
+    }
+
+    &.-beta::after {
+      font-size: .5rem;
+      font-weight: 900;
+      letter-spacing: 2px;
+
+      position: relative;
+      right: 1.875rem;
+      bottom: -.75rem;
+
+      display: block;
+
+      width: 0;
+
+      content: 'Beta';
+
+      color: $color-deep-gray;
     }
   }
 
