add js to collapse and expand excerpts without opinions

--- a/src/templates/components/tool-bar.html
+++ b/src/templates/components/tool-bar.html
@@ -9,7 +9,7 @@
     <a href="#" class="icon" aria-label="Comparar">
       {% include "svgs/arrows-icon.html" %}
     </a>
-    <a href="#" class="icon" aria-label="Expandir">
+    <a href="#" class="icon js-collapseExpand -collapsed" aria-label="Expandir">
       {% include "svgs/expand-icon.html" %}
     </a>
     <a href="#" class="icon" aria-label="Compartilhar">
