Animate icon collapse

--- a/src/static/scss/components/_tool-bar.scss
+++ b/src/static/scss/components/_tool-bar.scss
@@ -46,6 +46,25 @@
       &.-settings {
         margin-top: auto;
       }
+
+      &.-collapse {
+        transition: all .3s $swift-out;
+
+        .arrow1 {
+          transform: translateY(12px);
+        }
+
+        .arrow2 {
+          transform: translateY(-12px);
+        }
+      }
+
+      &.-collapsed {
+        .arrow1,
+        .arrow2 {
+          transform: translateY(0);
+        }
+      }
     }
   }
 }
