Feature/reduce excerpts (#104)
* add class -reduce in excerpts without suggestions

* add js to collapse and expand excerpts without opinions

* fix area-label from tool bar

* Animate icon collapse

* fix events comment

* fix lint

--- a/src/templates/components/tool-bar.html
+++ b/src/templates/components/tool-bar.html
@@ -6,18 +6,21 @@
     <a href="#" class="icon" aria-label="Exportar">
       {% include "svgs/download-icon.html" %}
     </a>
-    <a href="#" class="icon" aria-label="Comparar">
+    <!-- <a href="#" class="icon" aria-label="Comparar">
       {% include "svgs/arrows-icon.html" %}
-    </a>
-    <a href="#" class="icon" aria-label="Expandir">
+    </a> -->
+    <!-- <a href="#" class="icon" aria-label="Editar">
+      {% include "svgs/download-icon.html" %}
+    </a> -->
+    <a href="#" class="icon js-collapseExpand -collapse -collapsed" aria-label="Expandir">
       {% include "svgs/expand-icon.html" %}
     </a>
-    <a href="#" class="icon" aria-label="Compartilhar">
+    <!-- <a href="#" class="icon" aria-label="Compartilhar">
       {% include "svgs/share-icon.html" %}
-    </a>
-    <a href="#" class="icon" aria-label="Publicar">
+    </a> -->
+    <!-- <a href="#" class="icon" aria-label="Publicar">
       {% include "svgs/publish-icon.html" %}
-    </a>
+    </a> -->
     <a href="#" class="icon -settings" aria-label="Configurar">
       {% include "svgs/settings-icon.html" %}
     </a>
