--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -44,15 +44,18 @@
       <hr>
     </header>
     {% for excerpt in object.excerpts.all %}
-    {% if excerpt.excerpt_type.align_center %}
-    <h3>{% excerpt_numbering excerpt %}</h3>
-    <h3>{{ excerpt.content|safe }}</h3>
-    {% else %}
-    <p class="js-excerptWrapper" contenteditable="true">
-      <b contenteditable="false">{% excerpt_numbering excerpt %}</b>
-      {% include "components/document-excerpt.html" with excerpt=excerpt %}
-    </p>
-    {% endif %}
+      {% if excerpt.excerpt_type.align_center %}
+      <h3>{% excerpt_numbering excerpt %}</h3>
+      <h3>{{ excerpt.content|safe }}</h3>
+      {% else %}
+      <p class="js-excerptWrapper {% if not excerpt.suggestions.all %}-reduce{% endif %}">
+        <b>{% excerpt_numbering excerpt %}</b>
+        {% if not excerpt.suggestions.all %}
+        <span class="js-defaultText">...</span>
+        {% endif %}
+        {% include "components/document-excerpt.html" with excerpt=excerpt %}
+      </p>
+      {% endif %}
     {% endfor %}
   </article>
   {% include "components/tool-bar.html" %}
@@ -61,6 +64,7 @@
 {% endblock content %}
 
 {% block page_js %}
+<script src="{% static 'js/components/reduceExcerpts/view.js' %}"></script>
 <script src="{% static 'js/components/documentSideBar/view.js' %}"></script>
 <script src="{% static 'js/components/clusters/view.js' %}"></script>
 <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
