--- a/src/templates/components/document-info.html
+++ b/src/templates/components/document-info.html
@@ -58,9 +58,9 @@
   {% endfor %}
 {% endif %}
 <div class="item">
-  <div class="social">
+  <!-- <div class="social">
     <a class="facebook" data-social="facebook" title="Facebook" href="http://www.facebook.com/sharer/sharer.php?u={{request.build_absolute_uri}}" target="_blank" rel="noopener"></a>
     <a class="twitter" data-social="twitter" title="Twitter" href="http://twitter.com/share?text=Eu já estou participando, participe você também!&url={{request.build_absolute_uri}}" target="_blank" rel="noopener"></a>
     <a class="whatsapp" data-social="whatsapp" title="Whatsapp" href="https://api.whatsapp.com/send?text=Eu já estou participando, participe você também!%0A{{request.build_absolute_uri}}%20" target="_blank" rel="noopener"></a>
-  </div>
+  </div> -->
 </div>
