fix login button in opinion modal

--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -52,7 +52,7 @@
         <button class="indifferent js-opinionButton" data-opinion="neutral" aria-label="Indiferente"></button>
         <button class="agree js-opinionButton" data-opinion="approve" aria-label="Concordo"></button>
         {% else %}
-          <h3 class="notice"><a href="/admin/login?next={{request.path}}">Faça login</a> para poder avaliar esta opinião</h3>
+          <h3 class="notice"><a class="js-loginButton" href="#">Faça login</a> para poder avaliar esta opinião</h3>
         {% endif %}
         <button class="skip js-nextOpinion" data-opinion="skip" aria-label="Pular Opinião"></button>
       </footer>
