--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -45,10 +45,12 @@
     </header>
     {% for excerpt in object.excerpts.all %}
       {% if excerpt.excerpt_type.align_center %}
-      <h3>{% excerpt_numbering excerpt %}</h3>
-      <h3>{{ excerpt.content|safe }}</h3>
+      <div class="excerpt-wrapper {% excerpt_classes excerpt%}">
+        <h3>{% excerpt_numbering excerpt %}</h3>
+        <h3>{{ excerpt.content|safe }}</h3>
+      </div>
       {% else %}
-      <p class="js-excerptWrapper {% if not excerpt.suggestions.all %}-reduce{% endif %}">
+      <p class="excerpt-wrapper {% excerpt_classes excerpt%} {% if not excerpt.suggestions.all %}-reduce{% endif %} js-excerptWrapper">
         <b>{% excerpt_numbering excerpt %}</b>
         {% if not excerpt.suggestions.all %}
         <span class="js-defaultText">...</span>
@@ -58,7 +60,7 @@
       </p>
       {% endif %}
     {% endfor %}
-    {% include "components/add-excerpt.html" %}
+    <div class="js-textEditor"></div>
   </article>
   {% include "components/tool-bar.html" %}
 </main>
@@ -66,10 +68,10 @@
 {% endblock content %}
 
 {% block page_js %}
+<script src="{% static '/js/vendor/silegismg-editor-articulacao-plain-js.js' %}"></script>
 <script src="{% static 'js/components/reduceExcerpts/view.js' %}"></script>
 <script src="{% static 'js/components/documentSideBar/view.js' %}"></script>
 <script src="{% static 'js/components/clusters/view.js' %}"></script>
-<script src="{% static 'js/components/addExcerpt/view.js' %}"></script>
 <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
 <script src="{% static 'js/pages/editDocument.js' %}"></script>
 {% endblock page_js %}
