Add editor-articulacao from silegis-mg
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -15,6 +15,7 @@
 
 // Components
 @import 'components/document-excerpt';
+@import 'components/excerpt-wrapper';
 @import 'components/document-body';
 @import 'components/suggestion-input';
 @import 'components/nav-bar';
@@ -52,7 +53,6 @@
 @import 'components/document-editor';
 @import 'components/side-bar';
 @import 'components/tool-bar';
-@import 'components/add-excerpt';
 
 // Vendor
 @import 'vendor/tooltip';
